Fix for destination title not full width on mobile, causes sponsor to be in wrong position

--- a/assets/css/src/components/knowledge-hub/destinations.scss
+++ b/assets/css/src/components/knowledge-hub/destinations.scss
@@ -8,6 +8,7 @@
 }
 .destination-title {
     position: relative;
+    width: 100%;
     
     &.no-image {
       padding: 30px;
